compiler/tests/fail/param_expansion/x86-64/array_too_large_expr.jazz
export
fn main() -> reg u64 {
    stack u64[1] a;

    _ = a[0:0x10000000000000000];
    a[0] = 0;

    reg u64 r;
    r = a[0];

    return r;
}
